# HolyCow

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out.asm  test  test.nasm
libc/: defs.hhc  math.hcw  math.hhc  stdio.hcw  stdio.hhc  stdlib.hcw  stdlib.hhc  string.hcw  string.hhc
programs/: asteroids.cow  breakout.cow  calculator.cow  fibonacci.cow  fibonacci.hc  flight_sim.cow  helloworld.cow  helloworld.hc  json_example.cow  json_parser.hcw  physics.cow  snake.cow  snake.hc  stdin_control.hcw  test.cow  test.hc  test3d.cow  tictactoe.cow  tictactoe.hc
programs/assets/: cessna.glb  cessna.mtl  output.json
programs/raylib/: INFO.md  main.cow  main.hc  raylib.hcw  raylib.hhc  raymath.hc  raymath.hcw  raymath.hhc
src/: compiler.c  compiler.h
src/dev/: arena.c  file.c  hashtable.c  libs.h  style.h  types.h  utils.h  vector.c
src/generator/: evaluator.c  evaluator.h  generator.c  generator.h  hc_types.c  hc_types.h  regs.c  regs.h  target_requirements.h  target_x64_Linux.h  user_defined.c  user_defined.h
src/lexer/: keywords.c  lexer.c  lexer.h
src/parser/: parser.c  parser.h
src/targets/: nasm_x64_fregs.h  nasm_x64_ops.h  nasm_x64_regs.h  systemV_abi.h  target_win64.h  target_x64_Linux.h  x64_ops.h  x64_regs.h
std/: exception.asm  stdlib.asm  stdlib.hc  stdlib.hcw  stdlib.hhc  stdlib.nasm
std/linux/: TTY.hcw  errno.hc  errno.hcw  exception.cow  fcntl.hcw  linux.cow  memalloc.cow  netinet_in.hc  netinet_in.hcw  socket.hc  socket.hcw  stdlib.cow  stdlib.hc  syscall.hcw  termios.hc  termios.hcw  time.hc  time.hcw  unistd.hcw
test/: abc  abc.hc  lib.hc
